<resources>
    <string name="app_name">miPrimerAppAndroid</string>

    <!-- MainActivity strings -->

    <string name="mainactivity_titulo">Bienvenido</string>
    <string name="mainactivity_subtitulo">Curso Aplicaciones Moviles Android</string>
    <string name="mainactivity_usuario">Usuario</string>
    <string name="mainactivity_dni">Dni</string>
    <string name="mainactivity_ingresar">Ingresar</string>

    <!-- -->

</resources>
