<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="academiamoviles.com.miprimerappandroid.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mainactivity_titulo"
        android:textColor="@color/colorBlack"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/mainactivity_subtitulo"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mainactivity_usuario"
        android:id="@+id/textView3"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_usuario"
        android:drawablePadding="10dp"
        android:drawableLeft="@drawable/ic_usuario"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mainactivity_dni"
        android:id="@+id/textView4"
        android:textColor="@color/colorBlack"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_dni"
        android:drawablePadding="10dp"
        android:drawableLeft="@drawable/ic_dni"
        android:layout_below="@+id/textView4"
        android:inputType="number"
        android:maxLength="8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainactivity_ingresar"
        android:id="@+id/btn_ingresar"
        android:background="@color/colorAccent"
        android:layout_below="@+id/edt_dni"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp" />
</RelativeLayout>
